# web_server

./: .gitignore  clean.sh  make.sh  readme.txt
docs/: Полезные ссылки и стати.txt
docs/architecture_of_software/: maser_process.dia
docs/архитектура ПО/: maser_process.dia
inc/: server_config.h
inc/common/: console_show.h  current_system_info.h  delegate.h  delegate_base.h  destroyer_singleton.h  edit_directories.h  embedding_pyhton_api.h  event.h  event_dispatcher.h  event_dispatcher_impl.h  master_loader.h  server_loader.h  show_base.h  singleton_destroyer.h  singleton_destroyer_impl.h  types.h
inc/config/: config_struct.h  embedding_pyhton_api.h  embedding_python_api_impl.h  server_config.h  server_config_exception.h
inc/connection/: connection.h  connection_creator.h  tcp_connection.h  tcp_connection_creator.h
inc/daemon/: daemon.h  daemon_tool_exception.h
inc/file_api/: c_file_api.h  file_base.h
inc/logs/: access_log.h  error_log.h  serevr_log_exception.h  server_log.h
inc/network_api/: connection.h  connection_creator.h  connection_except.h
inc/process/: process.h  process_creator.h
inc/workers/: process.h  process_creator.h  worker_pocess_creator.h  worker_process.h
network_api/include/: base_selector.h  base_server.h  base_server_thread.h  base_user_session.h  cancellation_token.h  event_traits.h  event_void_spec.h  http_session.h  joinable_thread.h  joinable_thread_impl.h  listen_thread.h  (+8 more)
network_api/test/: CMakeLists.txt
scripts/: install.sh  web_server.sh
settings/: server_config.conf  server_config.yaml
src/: main.cpp
(+93 files in other folders)
